<resources>
    <string name="app_name">Guess the Number+</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="time_15">Time: 15</string>
    <string name="dev_name" translatable="false">An3Enterprises</string>
    <string name="play">Play</string>
    <string name="game_history">Game\nHistory</string>
    <string name="settings">Settings</string>
    <string name="remaining_tries">Remaining tries: 10</string>
    <string name="enter_first_name">Enter your first name here</string>
    <string name="take_a_guess_hint">Take a guess here!</string>
    <string name="guess_btn">Guess</string>
    <string name="submit_name_btn">Submit Name</string>
    <string name="choose_difficulty_text">Choose a difficulty.</string>
    <string name="easy_difficulty">Easy</string>
    <string name="medium_difficulty">Medium</string>
    <string name="hard_difficulty">Hard</string>
    <string name="very_hard_difficulty">Very Hard</string>
    <string name="impossible_difficulty">Impossible</string>
    <string name="name_game_history">Name</string>
    <string name="tries_game_history">Tries</string>
    <string name="difficulty_game_history">Difficulty</string>
    <string name="no_game_history">No game history</string>
    <string name="no_games_found">No games were found... so play a game!</string>
    <string name="not_right_now">Not right now</string>
    <string name="no_name">Name</string>
    <string name="mini_game">Mini game</string>
    <string name="found_mini_game">You just found a mini game! You have 15 seconds to find a secret item from your game history.</string>
    <string name="start">Start!</string>
    <string name="no_thanks">No thanks</string>
    <string name="you_found_item">You found the item!</string>
    <string name="congrats_secret_item_p1">Congratulations! You found the secret item with </string>
    <string name="congrats_secret_item_p2"> seconds to spare! The secret item WAS "</string>
    <string name="awesome">Awesome!</string>
    <string name="delete_all_history">Delete All History</string>
    <string name="user_sure_delete_history">Are you sure you want to delete ALL your game history?</string>
    <string name="deletion_canceled">Deletion canceled</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="history_deleted">History deleted</string>
    <string name="time">Time: </string>
    <string name="game_over">Game Over</string>
    <string name="sorry_mini_game">Sorry, I\'m afraid you didn\'t find the item on time. The item was \"</string>
    <string name="OK">OK</string>
    <string name="default_name">\nDefault name\n</string>
    <string name="donate">\nDonate\n</string>
    <string name="default_name_not_detected">Default name not detected. Please report to the developer if you set one up.</string>
    <string name="are_you">Are you </string>
    <string name="your_name_was_submitted">Your name was submitted.</string>
    <string name="error_name_not_submitted">Error, your name wasn\'t submitted</string>
    <string name="no">No</string>
    <string name="have_to_choose_difficulty">You have to choose a difficulty.</string>
    <string name="please_donate">Hello, if you like this app, please consider donating to me, and rating the app. This app will always be both free and ad-free.</string>
    <string name="is_too_low"> is too low</string>
    <string name="remaining_tries_java">Remaining tries: </string>
    <string name="is_too_high"> is too high</string>
    <string name="guess_a_num">Guess a number between \n1 and </string>
    <string name="sorry_i_am_afraid">Sorry I\'m afraid you didn\'t \nGuess the Number \nThe number was ...</string>
    <string name="never_been_a_name">There\'s never been a name \" \", lets keep it that way. Try again. </string>
    <string name="name_too_long">Your name is too long. It has to be under 10 characters.</string>
    <string name="forgot_default_name">You may have forgotten to set up your default name. After submitting your name go to Settings/Default name.</string>
    <string name="type_name">Type name</string>
    <string name="sure_donate">I\'ll donate</string>
    <string name="donation">Donation</string>
    <string name="congrats_main_game_p1">Congratulations! You guessed the number in </string>
    <string name="congrats_main_game_p2"> tries.\n\nThe number WAS </string>
    <string name="new_default_name">New Default Name</string>
    <string name="type_default_name">Type in your first name or nickname.</string>
    <string name="done">Done</string>
    <string name="default_name_changed">You default name was changed to</string>
    <string name="share">\nShare\n</string>
    <string name="invitation_message">Hey! You should install the app Guess the Number+! Its fun!</string>
    <string name="invitation_message_subject" translatable="false">Guess the Number+</string>
    <string name="invitation_cta" translatable="false">Guess the Number+</string>
    <string name="invitation_title" translatable="false">Guess the Number+</string>
    <string name="achievement_btn">Leaderboard</string>
    <string name="achievements">\nAchievements\n</string>
    <string name="connect_to_google">\nConnect to Google\n</string>

</resources>
