<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#d3d3d3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_difficulty_text"
        android:textColor="#000"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start"
        android:id="@+id/radio_difficulty">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy_difficulty"
            android:id="@+id/easy"
            android:textColor="#000"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium_difficulty"
            android:id="@+id/medium"
            android:textColor="#000"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard_difficulty"
            android:id="@+id/hard"
            android:textColor="#000"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/very_hard_difficulty"
            android:id="@+id/veryHard"
            android:textColor="#000"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/impossible_difficulty"
            android:id="@+id/impossible"
            android:textColor="#000"/>

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OK"
        android:background="#f01"
        android:textColor="#FFF"
        android:layout_marginTop="16dp"
        android:id="@+id/ok_button_difficulty"
        android:onClick="launchMainActivityGame"/>


</LinearLayout>