<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal">

    <TextView
        android:id="@+id/guess_responder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="234dp"
        android:text="@string/guess_a_num"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/final_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="234dp"
        android:text=""
        android:textSize="50sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/remaining_tries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/remaining_tries"
        android:textSize="17sp"/>

    <LinearLayout
        android:id="@+id/linearLayoutGuessBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:weightSum="10">

        <EditText
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:hint="@string/enter_first_name"
            android:inputType="textCapWords"
            android:textColor="#000"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/user_input_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="8"
            android:focusableInTouchMode="true"
            android:hint="@string/take_a_guess_hint"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="#000" />

        <Button
            android:id="@+id/guess_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="1dp"
            android:layout_weight="2"
            android:background="@color/lightGray"
            android:enabled="false"
            android:onClick="getGuess"
            android:text="@string/guess_btn"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/submitName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="1dp"
            android:layout_weight="3"
            android:background="#f01c00"
            android:enabled="false"
            android:onClick="next"
            android:text="@string/submit_name_btn"
            android:textColor="#FFF"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>