<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="60dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#f01c00"
            android:padding="16dp"
            android:text="@string/play"
            android:textColor="#FFFFFF" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal"
            android:weightSum="10">

            <Button
                android:id="@+id/all_games"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="5"
                android:background="#f01c00"
                android:onClick="goToGameHistory"
                android:text="@string/game_history"
                android:textColor="#FFF"
                android:visibility="visible" />


            <Button
                android:id="@+id/settings_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="5"
                android:background="#f01c00"
                android:onClick="goToSettings"
                android:text="@string/settings"
                android:textColor="#FFF" />


        </LinearLayout>

        <Button
            android:id="@+id/donate_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:minHeight="0dp"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:background="#f01c00"
            android:onClick="donation"
            android:text="@string/donate"
            android:textColor="#FFF" />


    </LinearLayout>

    <!--<com.google.android.gms.ads.AdView-->
        <!--android:id="@+id/adView"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--ads:adSize="BANNER"-->
        <!--ads:adUnitId="@string/banner_ad_unit_id">-->
    <!--</com.google.android.gms.ads.AdView>-->

</LinearLayout>
